--- a/public/index.html
+++ b/public/index.html
@@ -3,29 +3,75 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Airbnb Alerts — Demo UI</title>
+    <title>Airbnb Alerts</title>
     <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
     <div class="container">
       <header>
-        <h1>Airbnb Alerts — Demo</h1>
+        <h1>Airbnb Alerts</h1>
         <div id="auth-area">
-          <button id="btn-logout" class="hidden">Logout</button>
+          <button id="btn-logout" class="hidden secondary">Sign out</button>
         </div>
       </header>
 
       <main>
-        <!-- Authentication moved to /auth.html -->
 
+        <!-- ── Subscription / plan card ─────────────────────────────────── -->
+        <section class="card hidden" id="subscription-card">
+          <div style="display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap;gap:12px">
+            <div>
+              <h2 style="margin:0 0 4px">Your plan</h2>
+              <div id="plan-summary" class="note">Loading…</div>
+            </div>
+            <div style="display:flex;gap:8px;flex-wrap:wrap">
+              <button id="btn-upgrade" class="primary">Upgrade plan</button>
+              <button id="btn-manage-billing" class="secondary">Manage billing</button>
+            </div>
+          </div>
+
+          <!-- Inline plan picker (revealed when upgrade clicked) -->
+          <div id="upgrade-panel" class="hidden" style="margin-top:20px">
+            <h3 style="margin:0 0 14px">Choose a plan</h3>
+            <div id="plan-cards" style="display:flex;flex-direction:column;gap:12px;max-width:560px"></div>
+            <div style="margin-top:16px;display:flex;gap:8px">
+              <button id="btn-confirm-upgrade" class="primary" disabled>Continue to payment →</button>
+              <button id="btn-cancel-upgrade" class="secondary">Cancel</button>
+            </div>
+          </div>
+        </section>
+
+        <!-- ── Create alert ─────────────────────────────────────────────── -->
         <section class="card hidden" id="create-alert-card">
-          <h2>Create alerts</h2>
+          <h2>Create alert</h2>
 
-          <div style="display:flex;gap:12px;align-items:flex-start;flex-wrap:wrap">
-            <div style="flex:1;min-width:280px">
-              <h3>Track specific listing</h3>
+          <div style="display:flex;gap:24px;align-items:flex-start;flex-wrap:wrap">
+
+            <!-- URL-based search alert (primary) -->
+            <div style="flex:2;min-width:300px">
+              <h3 style="margin-top:0">Search alert — paste your Airbnb URL</h3>
+              <p class="note" style="margin-bottom:10px">
+                Go to Airbnb, apply all your filters, then copy the URL from your browser bar and paste it here.
+                We'll monitor that exact search and notify you when new listings appear.
+              </p>
+              <div class="row">
+                <input id="alert-search-url"
+                  placeholder="https://www.airbnb.com/s/Barcelona--Spain/homes?checkin=…"
+                  style="flex:1" />
+              </div>
+              <div class="row buttons">
+                <button id="btn-create-url-alert">Save alert</button>
+              </div>
+            </div>
+
+            <!-- Specific listing tracker (secondary) -->
+            <div style="flex:1;min-width:240px">
+              <h3 style="margin-top:0">Track a specific listing</h3>
+              <p class="note" style="margin-bottom:10px">Get notified when a listing becomes available for your dates.</p>
               <div class="row">
                 <input id="listing-id" placeholder="Listing ID (e.g. 12345678)" />
+              </div>
+              <div class="row">
                 <input id="listing-url" placeholder="Listing URL" />
               </div>
               <div class="row">
@@ -37,45 +83,19 @@
               </div>
             </div>
 
-            <div style="flex:1;min-width:320px">
-              <h3>Search-based alert</h3>
-              <div class="row">
-                <div style="position:relative;flex:1">
-                  <input id="search-location" placeholder="Location (city, address)" autocomplete="off" />
-                  <div id="location-suggestions" class="hidden" style="position:absolute;left:0;right:0;z-index:20;background:var(--card);border:1px solid rgba(16,24,40,0.06);margin-top:6px;border-radius:8px;overflow:hidden;box-shadow:0 6px 18px rgba(16,24,40,0.06)"></div>
-                </div>
-              </div>
-              <div class="note" style="margin-top:6px">Dates are optional for preview — include them if you want availability-specific results.</div>
-              <div class="row" style="align-items:center;gap:8px;margin-top:8px">
-                <label><input type="checkbox" id="filter-premium"/> Premium</label>
-                <input id="filter-premium-min" placeholder="$ min" type="number" style="width:100px" />
-                <label><input type="checkbox" id="filter-popular"/> Popular</label>
-                <input id="filter-popular-min" placeholder="min reviews" type="number" style="width:110px" />
-                <label><input type="checkbox" id="filter-superhost"/> Superhost</label>
-                <label style="margin-left:8px"><input type="checkbox" id="filter-saved"/> Only saved</label>
-              </div>
-              <div class="row">
-                <label>Check-in <input id="search-check-in" type="date" /></label>
-                <label>Check-out <input id="search-check-out" type="date" /></label>
-              </div>
-              <div class="row">
-                <input id="price-min" placeholder="Min price" type="number" />
-                <input id="price-max" placeholder="Max price" type="number" />
-                <input id="guests" placeholder="Guests" type="number" />
-              </div>
-              <div class="row buttons">
-                <button id="btn-create-search">Create search alert</button>
-                <button id="btn-preview-search" class="secondary">Preview results</button>
-              </div>
-            </div>
           </div>
         </section>
 
+        <!-- ── Your alerts ──────────────────────────────────────────────── -->
         <section class="card hidden" id="alerts-card">
-          <h2>Your Alerts</h2>
-          <div id="alerts-list">(no alerts)</div>
+          <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:8px">
+            <h2 style="margin:0">Your alerts</h2>
+            <button id="btn-refresh" class="secondary" style="font-size:13px;padding:6px 10px">↻ Refresh</button>
+          </div>
+          <div id="alerts-list"></div>
         </section>
 
+        <!-- ── Listings panel ───────────────────────────────────────────── -->
         <section class="card hidden" id="listings-panel">
           <div style="display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap">
             <h2 style="margin:0">Listings <span id="listings-for-id"></span></h2>
@@ -92,51 +112,41 @@
               <button id="btn-load-more">Load more</button>
             </div>
           </div>
-          <div id="listings-list">(no listings)</div>
-          <pre id="preview-debug" class="note hidden" style="margin-top:12px;white-space:pre-wrap;max-height:180px;overflow:auto;background:var(--muted-bg);padding:8px;border-radius:8px;border:1px solid rgba(16,24,40,0.04)"></pre>
+          <div id="listings-list"></div>
         </section>
 
-        <!-- Confirmation modal (re-used for save actions) -->
+        <!-- ── Confirm modal ────────────────────────────────────────────── -->
         <div id="confirm-modal" class="modal hidden" role="dialog" aria-modal="true">
           <div class="modal-backdrop" id="confirm-backdrop"></div>
           <div class="modal-content" style="max-width:420px">
             <div id="confirm-body" style="padding:12px">Are you sure?</div>
-            <div style="display:flex;gap:8px;justify-content:flex-end;padding:12px;background:transparent">
+            <div style="display:flex;gap:8px;justify-content:flex-end;padding:12px">
               <button id="confirm-cancel" class="secondary">Cancel</button>
               <button id="confirm-ok">Confirm</button>
             </div>
           </div>
         </div>
 
-        <!-- Listing details modal -->
+        <!-- ── Listing details modal ────────────────────────────────────── -->
         <div id="listing-modal" class="modal hidden" role="dialog" aria-modal="true">
           <div class="modal-backdrop" id="modal-backdrop"></div>
           <div class="modal-content">
             <button id="modal-close" class="modal-close">×</button>
-            <div id="modal-body">
-              <div id="modal-loader">Loading...</div>
-            </div>
+            <div id="modal-body"><div id="modal-loader">Loading…</div></div>
           </div>
         </div>
 
-        <section class="card" id="notifications-card">
+        <!-- ── Recent notifications ─────────────────────────────────────── -->
+        <section class="card hidden" id="notifications-card">
           <h2>Recent notifications</h2>
-          <div id="notifications-list">(no notifications)</div>
-        </section>
-
-        <section class="card" id="help-card">
-          <h2>Quick actions</h2>
-          <div class="row">
-            <button id="btn-refresh">Refresh alerts</button>
-          </div>
-          <p class="note">This is a minimal demo UI — uses the backend API at <code>/api</code>.</p>
+          <div id="notifications-list"></div>
         </section>
 
         <div id="message" class="message hidden"></div>
       </main>
 
       <footer>
-        <small>Airbnb Alerts — Backend demo</small>
+        <small style="color:var(--muted)">Airbnb Alerts</small>
       </footer>
     </div>
 
