--- a/public/index.html
+++ b/public/index.html
@@ -11,39 +11,32 @@
       <header>
         <h1>Airbnb Alerts</h1>
         <div id="auth-area">
-          <button id="btn-logout" class="hidden secondary">Sign out</button>
+          <div class="user-menu">
+            <button id="user-menu-btn" class="user-menu-btn">
+              <span class="user-avatar">👤</span>
+              <span class="user-email" id="user-email-display"></span>
+              <span class="dropdown-arrow">▼</span>
+            </button>
+            <div id="user-dropdown" class="user-dropdown hidden">
+              <a href="/settings.html" class="dropdown-item">Settings</a>
+              <a href="/billing.html" class="dropdown-item">Plan</a>
+              <div class="dropdown-divider"></div>
+              <button id="btn-logout" class="dropdown-item logout-btn">Logout</button>
+            </div>
+          </div>
         </div>
       </header>
 
       <main>
 
-        <!-- ── Subscription / plan card ─────────────────────────────────── -->
-        <section class="card hidden" id="subscription-card">
-          <div style="display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap;gap:12px">
-            <div>
-              <h2 style="margin:0 0 4px">Your plan</h2>
-              <div id="plan-summary" class="note">Loading…</div>
-            </div>
-            <div style="display:flex;gap:8px;flex-wrap:wrap">
-              <button id="btn-upgrade" class="primary">Upgrade plan</button>
-              <button id="btn-manage-billing" class="secondary">Manage billing</button>
-            </div>
-          </div>
-
-          <!-- Inline plan picker (revealed when upgrade clicked) -->
-          <div id="upgrade-panel" class="hidden" style="margin-top:20px">
-            <h3 style="margin:0 0 14px">Choose a plan</h3>
-            <div id="plan-cards" style="display:flex;flex-direction:column;gap:12px;max-width:560px"></div>
-            <div style="margin-top:16px;display:flex;gap:8px">
-              <button id="btn-confirm-upgrade" class="primary" disabled>Continue to payment →</button>
-              <button id="btn-cancel-upgrade" class="secondary">Cancel</button>
-            </div>
-          </div>
-        </section>
-
         <!-- ── Create alert ─────────────────────────────────────────────── -->
         <section class="card hidden" id="create-alert-card">
           <h2>Create alert</h2>
+
+          <!-- Free user notice -->
+          <div id="free-trial-notice" style="background:linear-gradient(90deg,#f59e0b,#ef4444);color:white;padding:12px;border-radius:8px;margin-bottom:16px;font-size:14px">
+            <strong>Free Trial:</strong> You can create 1 alert that lasts 24 hours. Upgrade for unlimited alerts and real-time notifications.
+          </div>
 
           <div style="display:flex;gap:24px;align-items:flex-start;flex-wrap:wrap">
 
@@ -59,29 +52,13 @@
                   placeholder="https://www.airbnb.com/s/Barcelona--Spain/homes?checkin=…"
                   style="flex:1" />
               </div>
+              <div id="alert-search-preview" class="search-url-preview hidden" aria-hidden="true"></div>
               <div class="row buttons">
                 <button id="btn-create-url-alert">Save alert</button>
               </div>
             </div>
 
-            <!-- Specific listing tracker (secondary) -->
-            <div style="flex:1;min-width:240px">
-              <h3 style="margin-top:0">Track a specific listing</h3>
-              <p class="note" style="margin-bottom:10px">Get notified when a listing becomes available for your dates.</p>
-              <div class="row">
-                <input id="listing-id" placeholder="Listing ID (e.g. 12345678)" />
-              </div>
-              <div class="row">
-                <input id="listing-url" placeholder="Listing URL" />
-              </div>
-              <div class="row">
-                <label>Check-in <input id="check-in" type="date" /></label>
-                <label>Check-out <input id="check-out" type="date" /></label>
-              </div>
-              <div class="row buttons">
-                <button id="btn-save-listing">Save listing</button>
-              </div>
-            </div>
+            <!-- (Specific listing tracking removed — only URL-based search alerts are supported in the UI) -->
 
           </div>
         </section>
@@ -127,12 +104,59 @@
           </div>
         </div>
 
+        <!-- ── Alert-created confirmation modal (shown after creating a URL alert) ── -->
+        <div id="alert-created-modal" class="modal hidden" role="dialog" aria-modal="true">
+          <div class="modal-backdrop" id="alert-created-backdrop"></div>
+          <div class="modal-content" style="max-width:520px">
+            <button id="alert-created-close" class="modal-close">×</button>
+            <h2 style="margin-top:0">Your alert was set</h2>
+            <p style="color:var(--muted)">Check your inbox for a confirmation email (also check your spam folder).</p>
+            <p style="color:var(--muted)">We'll email you daily at 11am EST only if there are newly available listings (e.g. cancellations, price drops, or new listings).</p>
+            <p style="margin-top:8px;font-weight:700">Want instant alerts when listings become available throughout the day, so you can book before others?</p>
+            <div style="display:flex;gap:12px;justify-content:flex-end;margin-top:14px">
+              <button id="btn-upgrade-now" class="primary">Upgrade to Premium</button>
+              <button id="btn-alert-created-notnow" class="secondary">Not now</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- ── Creation limit modal (shown when free/basic users try to add >1 search) ── -->
+        <div id="limit-modal" class="modal hidden" role="dialog" aria-modal="true">
+          <div class="modal-backdrop" id="limit-backdrop"></div>
+          <div class="modal-content" style="max-width:520px">
+            <button id="limit-close" class="modal-close">×</button>
+            <h2 style="margin-top:0">Upgrade to add more searches</h2>
+            <p style="color:var(--muted)">Free & Basic users can create only 1 active search alert. Upgrade to Premium to create multiple searches and receive instant notifications.</p>
+            <div style="display:flex;gap:12px;justify-content:flex-end;margin-top:14px">
+              <button id="btn-limit-upgrade" class="primary">Upgrade to Premium</button>
+              <button id="btn-limit-cancel" class="secondary">Not now</button>
+            </div>
+          </div>
+        </div>
+
         <!-- ── Listing details modal ────────────────────────────────────── -->
         <div id="listing-modal" class="modal hidden" role="dialog" aria-modal="true">
           <div class="modal-backdrop" id="modal-backdrop"></div>
           <div class="modal-content">
             <button id="modal-close" class="modal-close">×</button>
             <div id="modal-body"><div id="modal-loader">Loading…</div></div>
+          </div>
+        </div>
+
+        <!-- ── Search-link modal (shows the URL the user saved) ───────────────── -->
+        <div id="search-modal" class="modal hidden" role="dialog" aria-modal="true">
+          <div class="modal-backdrop" id="search-backdrop"></div>
+          <div class="modal-content" style="max-width:640px">
+            <button id="search-modal-close" class="modal-close">×</button>
+            <div id="search-modal-body" style="padding:12px">
+              <h3 style="margin-top:0">Your saved search</h3>
+              <p class="note">This is the exact Airbnb search URL you provided. You can open it or copy the link.</p>
+              <pre id="search-url-display" style="background:rgba(255,255,255,0.02);padding:10px;border-radius:8px;overflow:auto;word-break:break-all"></pre>
+              <div style="display:flex;gap:8px;justify-content:flex-end;margin-top:12px">
+                <button id="search-open" class="secondary">Open search</button>
+                <button id="search-copy">Copy link</button>
+              </div>
+            </div>
           </div>
         </div>
 
