--- a/public/auth.html
+++ b/public/auth.html
@@ -13,7 +13,14 @@
       </header>
 
       <main>
-        <section class="card" id="auth-card">
+        <!-- Tabs for Login/Register -->
+        <div style="display:flex;gap:12px;margin-bottom:16px;border-bottom:1px solid rgba(16,24,40,0.1)">
+          <button id="tab-login" class="auth-tab active" style="padding:12px 0;border:none;background:transparent;color:var(--text);cursor:pointer;font-weight:500;border-bottom:2px solid var(--accent);margin-bottom:-1px">Login</button>
+          <button id="tab-register" class="auth-tab" style="padding:12px 0;border:none;background:transparent;color:var(--muted);cursor:pointer;font-weight:500;border-bottom:2px solid transparent">Register</button>
+        </div>
+
+        <!-- Login Form -->
+        <section class="card" id="login-card">
           <div style="display:flex;align-items:center;gap:12px;margin-bottom:12px">
             <div style="width:48px;height:48px;border-radius:10px;background:linear-gradient(135deg,#FF5A5F,#FF8A80);display:flex;align-items:center;justify-content:center;font-weight:700;color:white">AA</div>
             <div>
@@ -24,25 +31,129 @@
 
           <div style="margin-top:8px">
             <label style="display:block;margin-bottom:6px;font-size:13px;color:var(--muted)">Email</label>
-            <input id="email" placeholder="you@example.com" autocomplete="username" />
-            <div id="email-help" class="note" style="margin-top:6px"></div>
+            <input id="login-email" placeholder="you@example.com" autocomplete="username" />
+            <div id="login-email-help" class="note" style="margin-top:6px"></div>
           </div>
 
           <div style="margin-top:12px">
             <label style="display:block;margin-bottom:6px;font-size:13px;color:var(--muted)">Password</label>
             <div style="display:flex;gap:8px;align-items:center">
-              <input id="password" placeholder="Choose a strong password" type="password" autocomplete="current-password" style="flex:1" />
-              <button id="toggle-password" class="secondary" type="button">Show</button>
+              <input id="login-password" placeholder="Enter your password" type="password" autocomplete="current-password" style="flex:1" />
+              <button id="toggle-login-password" class="secondary" type="button">Show</button>
             </div>
-            <div id="password-help" class="note" style="margin-top:6px">At least 8 characters, include letters and numbers.</div>
+            <div id="login-password-help" class="note" style="margin-top:6px">At least 8 characters, include letters and numbers.</div>
           </div>
 
-          <div class="row buttons" style="margin-top:16px">
-            <button id="btn-register" disabled>Register</button>
-            <button id="btn-login" disabled>Login</button>
+          <button id="btn-login" disabled style="width:100%;margin-top:16px">Login</button>
+
+          <div style="margin-top:12px;text-align:center">
+            <button id="btn-forgot-password" class="secondary" style="width:100%">Forgot password?</button>
           </div>
+
+          <div style="margin-top:16px;display:flex;align-items:center;gap:12px">
+            <div style="flex:1;height:1px;background:rgba(16,24,40,0.1)"></div>
+            <span style="font-size:13px;color:var(--muted)">or</span>
+            <div style="flex:1;height:1px;background:rgba(16,24,40,0.1)"></div>
+          </div>
+
+          <button id="btn-google-login" class="secondary" style="width:100%;margin-top:16px;display:flex;align-items:center;justify-content:center;gap:8px">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" fill="#4285F4"/>
+              <path d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" fill="#34A853"/>
+              <path d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" fill="#FBBC05"/>
+              <path d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" fill="#EA4335"/>
+            </svg>
+            Sign in with Google
+          </button>
+        </section>
+
+        <!-- Register Form -->
+        <section class="card" id="register-card" style="display:none">
+          <div style="display:flex;align-items:center;gap:12px;margin-bottom:12px">
+            <div style="width:48px;height:48px;border-radius:10px;background:linear-gradient(135deg,#10b981,#34d399);display:flex;align-items:center;justify-content:center;font-weight:700;color:white">AA</div>
+            <div>
+              <h2 style="margin:0 0 4px 0">Create account</h2>
+              <div class="note">Join Airbnb Alerts to get notified about listings</div>
+            </div>
+          </div>
+
+          <div style="margin-top:8px">
+            <label style="display:block;margin-bottom:6px;font-size:13px;color:var(--muted)">Email</label>
+            <input id="register-email" placeholder="you@example.com" autocomplete="email" />
+            <div id="register-email-help" class="note" style="margin-top:6px"></div>
+          </div>
+
+          <div style="margin-top:12px">
+            <label style="display:block;margin-bottom:6px;font-size:13px;color:var(--muted)">Password</label>
+            <div style="display:flex;gap:8px;align-items:center">
+              <input id="register-password" placeholder="Choose a strong password" type="password" autocomplete="new-password" style="flex:1" />
+              <button id="toggle-register-password" class="secondary" type="button">Show</button>
+            </div>
+            <div id="register-password-help" class="note" style="margin-top:6px">At least 8 characters, include letters and numbers.</div>
+          </div>
+
+          <button id="btn-register" disabled style="width:100%;margin-top:16px">Create Account</button>
 
           <p class="note" style="margin-top:12px">By registering you agree to receive email notifications for alerts.</p>
+
+          <div style="margin-top:16px;display:flex;align-items:center;gap:12px">
+            <div style="flex:1;height:1px;background:rgba(16,24,40,0.1)"></div>
+            <span style="font-size:13px;color:var(--muted)">or</span>
+            <div style="flex:1;height:1px;background:rgba(16,24,40,0.1)"></div>
+          </div>
+
+          <button id="btn-google-register" class="secondary" style="width:100%;margin-top:16px;display:flex;align-items:center;justify-content:center;gap:8px">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" fill="#4285F4"/>
+              <path d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" fill="#34A853"/>
+              <path d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" fill="#FBBC05"/>
+              <path d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" fill="#EA4335"/>
+            </svg>
+            Sign up with Google
+          </button>
+        </section>
+
+        <!-- Forgot Password Form -->
+        <section class="card" id="forgot-password-card" style="display:none">
+          <div style="margin-bottom:16px">
+            <button id="btn-back-to-login" class="secondary" style="margin-bottom:12px">← Back to Login</button>
+            <h2 style="margin:0 0 8px 0">Reset your password</h2>
+            <p class="note" style="margin:0">Enter your email address and we'll send you a password reset link.</p>
+          </div>
+
+          <div style="margin-top:16px">
+            <label style="display:block;margin-bottom:6px;font-size:13px;color:var(--muted)">Email</label>
+            <input id="forgot-email" placeholder="you@example.com" autocomplete="email" />
+            <div id="forgot-email-help" class="note" style="margin-top:6px"></div>
+          </div>
+
+          <button id="btn-send-reset" disabled style="width:100%;margin-top:16px">Send Reset Link</button>
+        </section>
+
+        <!-- Reset Password Form -->
+        <section class="card" id="reset-password-card" style="display:none">
+          <div style="margin-bottom:16px">
+            <button id="btn-back-to-login-2" class="secondary" style="margin-bottom:12px">← Back to Login</button>
+            <h2 style="margin:0 0 8px 0">Create new password</h2>
+            <p class="note" style="margin:0">Enter a new password for your account.</p>
+          </div>
+
+          <div style="margin-top:16px">
+            <label style="display:block;margin-bottom:6px;font-size:13px;color:var(--muted)">New Password</label>
+            <div style="display:flex;gap:8px;align-items:center">
+              <input id="reset-password" placeholder="Choose a strong password" type="password" autocomplete="new-password" style="flex:1" />
+              <button id="toggle-reset-password" class="secondary" type="button">Show</button>
+            </div>
+            <div id="reset-password-help" class="note" style="margin-top:6px">At least 8 characters, include letters and numbers.</div>
+          </div>
+
+          <div style="margin-top:12px">
+            <label style="display:block;margin-bottom:6px;font-size:13px;color:var(--muted)">Confirm Password</label>
+            <input id="reset-confirm" placeholder="Confirm your password" type="password" autocomplete="new-password" />
+            <div id="reset-confirm-help" class="note" style="margin-top:6px"></div>
+          </div>
+
+          <button id="btn-reset-password" disabled style="width:100%;margin-top:16px">Reset Password</button>
         </section>
       </main>
 
