--- a/public/auth.html
+++ b/public/auth.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Sign in — Airbnb Alerts</title>
+    <title>Sign in — Alert Buzz</title>
     <link rel="stylesheet" href="/styles.css">
   </head>
   <body class="auth-page">
     <div class="container">
       <header>
-        <h1>Airbnb Alerts — Sign in</h1>
+        <h1>Alert Buzz — Sign in</h1>
       </header>
 
       <main>
@@ -25,7 +25,7 @@
             <div style="width:48px;height:48px;border-radius:10px;background:linear-gradient(135deg,#FF5A5F,#FF8A80);display:flex;align-items:center;justify-content:center;font-weight:700;color:white">AA</div>
             <div>
               <h2 style="margin:0 0 4px 0">Welcome back</h2>
-              <div class="note">Sign in to your Airbnb Alerts dashboard</div>
+              <div class="note">Sign in to your Alert Buzz dashboard</div>
             </div>
           </div>
 
@@ -73,7 +73,7 @@
             <div style="width:48px;height:48px;border-radius:10px;background:linear-gradient(135deg,#10b981,#34d399);display:flex;align-items:center;justify-content:center;font-weight:700;color:white">AA</div>
             <div>
               <h2 style="margin:0 0 4px 0">Create account</h2>
-              <div class="note">Join Airbnb Alerts to get notified about listings</div>
+              <div class="note">Join Alert Buzz to get notified about listings</div>
             </div>
           </div>
 
@@ -158,7 +158,7 @@
       </main>
 
       <footer>
-        <small>Airbnb Alerts — Demo</small>
+        <small>Alert Buzz — Demo</small>
       </footer>
     </div>
 
