--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Airbnb Alerts</title>
+    <title>Alert Buzz</title>
     <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
     <div class="container">
       <header>
-        <h1>Airbnb Alerts</h1>
+        <h1>Alert Buzz</h1>
         <div id="auth-area">
           <div class="user-menu">
             <button id="user-menu-btn" class="user-menu-btn">
@@ -170,7 +170,7 @@
       </main>
 
       <footer>
-        <small style="color:var(--muted)">Airbnb Alerts</small>
+        <small style="color:var(--muted)">Alert Buzz</small>
       </footer>
     </div>
 
