--- a/public/settings.html
+++ b/public/settings.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Settings — Airbnb Alerts</title>
+    <title>Settings — Alert Buzz</title>
     <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
     <div class="container">
       <header>
-        <h1>Airbnb Alerts</h1>
+        <h1>Alert Buzz</h1>
         <div id="auth-area">
           <a href="/" class="secondary">← Back to Dashboard</a>
           <button id="btn-logout" class="secondary">Sign out</button>
@@ -28,7 +28,7 @@
       </main>
 
       <footer>
-        <small style="color:var(--muted)">Airbnb Alerts</small>
+        <small style="color:var(--muted)">Alert Buzz</small>
       </footer>
     </div>
 
