--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
   <body>
     <div class="container">
       <header>
-        <h1>Alert Buzz</h1>
+        <div style="display:flex;align-items:center;gap:12px">
+          <img src="/logo.png" alt="Alert Buzz Logo" style="width:40px;height:40px;border-radius:8px" />
+          <h1 style="margin:0">Alert Buzz</h1>
+        </div>
         <div id="auth-area">
           <div class="user-menu">
             <button id="user-menu-btn" class="user-menu-btn">
@@ -18,8 +21,8 @@
               <span class="dropdown-arrow">▼</span>
             </button>
             <div id="user-dropdown" class="user-dropdown hidden">
-              <a href="/settings.html" class="dropdown-item">Settings</a>
-              <a href="/billing.html" class="dropdown-item">Plan</a>
+              <a href="/settings" class="dropdown-item">Settings</a>
+              <a href="/billing" class="dropdown-item">Plan</a>
               <div class="dropdown-divider"></div>
               <button id="btn-logout" class="dropdown-item logout-btn">Logout</button>
             </div>
