--- a/public/auth.html
+++ b/public/auth.html
@@ -22,7 +22,7 @@
         <!-- Login Form -->
         <section class="card" id="login-card">
           <div style="display:flex;align-items:center;gap:12px;margin-bottom:12px">
-            <div style="width:48px;height:48px;border-radius:10px;background:linear-gradient(135deg,#FF5A5F,#FF8A80);display:flex;align-items:center;justify-content:center;font-weight:700;color:white">AA</div>
+            <img src="/logo.png" alt="Alert Buzz Logo" style="width:48px;height:48px;border-radius:10px" />
             <div>
               <h2 style="margin:0 0 4px 0">Welcome back</h2>
               <div class="note">Sign in to your Alert Buzz dashboard</div>
@@ -70,7 +70,7 @@
         <!-- Register Form -->
         <section class="card" id="register-card" style="display:none">
           <div style="display:flex;align-items:center;gap:12px;margin-bottom:12px">
-            <div style="width:48px;height:48px;border-radius:10px;background:linear-gradient(135deg,#10b981,#34d399);display:flex;align-items:center;justify-content:center;font-weight:700;color:white">AA</div>
+            <img src="/logo.png" alt="Alert Buzz Logo" style="width:48px;height:48px;border-radius:10px" />
             <div>
               <h2 style="margin:0 0 4px 0">Create account</h2>
               <div class="note">Join Alert Buzz to get notified about listings</div>
@@ -158,7 +158,7 @@
       </main>
 
       <footer>
-        <small>Alert Buzz — Demo</small>
+        <small>Alert Buzz</small>
       </footer>
     </div>
 
