--- a/public/settings.html
+++ b/public/settings.html
@@ -9,7 +9,10 @@
   <body>
     <div class="container">
       <header>
-        <h1>Alert Buzz</h1>
+        <div style="display:flex;align-items:center;gap:12px">
+          <img src="/logo.png" alt="Alert Buzz Logo" style="width:40px;height:40px;border-radius:8px" />
+          <h1 style="margin:0">Alert Buzz</h1>
+        </div>
         <div id="auth-area">
           <a href="/" class="secondary">← Back to Dashboard</a>
           <button id="btn-logout" class="secondary">Sign out</button>
